[lizeyang] feat: add header style

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -14,3 +14,16 @@ body {
   box-sizing: border-box;
 }
 
+.header ul {
+  list-style: none;
+  background-color: black;
+  color: lightgray;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.header li {
+  padding: 15px 0;
+}
