--- a/src/style/index.css
+++ b/src/style/index.css
@@ -21,7 +21,9 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  position: fixed;
+  width: 100%;
 }
 
 .header li {
