[lizeyang] feat: add login part style

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -92,3 +92,46 @@ body {
 .article-more {
   color: blue;
 }
+
+.login {
+  /* display: flex;
+  align-items: center; */
+}
+
+.login-content {
+  width: 230px;
+  text-align: center;
+  align-items: center;
+  background-color: #eeeeee;
+  position: fixed;
+  right: 5%;
+  top: calc(calc(100% - 162px)/2 - 43px + 50px);
+  padding: 20px 0;
+}
+
+.email {
+  border: 1px solid lightgray;
+  border-bottom: 0px;
+  padding: 8px;
+  border-radius: 5px 5px 0 0;
+}
+
+.password {
+  border: 1px solid lightgray;
+  padding: 8px;
+  border-radius: 0 0 5px 5px;
+}
+
+.checkbox {
+  margin: 5px 0 10px 0;
+}
+
+.sign-in {
+  font-size: medium;
+  width: 187px;
+  color: white;
+  background-color: cornflowerblue;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding: 5px;
+}
