--- a/src/style/index.css
+++ b/src/style/index.css
@@ -65,15 +65,13 @@ body {
 .main-cotent {
   margin: 20px 0;
   max-width: 1250px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: baseline;
 }
 
 .article {
   width: 600px;
   border: 2px solid lightgray;
   margin: 10px;
+  float: right;
 }
 
 .article-content {
